--- a/.gitignore
+++ b/.gitignore
@@ -7,6 +7,8 @@
 *.dll
 *.so
 *.dylib
+.vscode/
+.idea/
 
 # Test binary, built with `go test -c`
 *.test
@@ -20,6 +22,9 @@
 # Go workspace file
 go.work
 go.work.sum
+go.mod
+go.sum
+
 
 # env file
 .env
