--- a/.gitignore
+++ b/.gitignore
@@ -9,6 +9,7 @@
 *.dylib
 .vscode/
 .idea/
+.env
 
 # Test binary, built with `go test -c`
 *.test
@@ -22,8 +23,7 @@
 # Go workspace file
 go.work
 go.work.sum
-go.mod
-go.sum
+
 
 
 # env file
